finished example 1 and 2

--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <title>loaders</title>
+    <link rel="stylesheet" href="./index.css">
   </head>
   <body>
-    <main>
-        <div id="loader-1"></div>
-        <div id="loader-2"></div>
-        <div id="loader-3"></div>
-    </main>
+    <div id="example-1" class="loader"></div>
+
+    <div id="example-2" class="loader">
+        <div id="bar-1" class="bar"></div>
+        <div id="bar-2" class="bar"></div>
+        <div id="bar-3" class="bar"></div>
+    </div>
+    
+    <div id="example-3" class="loader"></div>
   </body>
 </html>
