--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
         <div id="bar-3" class="bar"></div>
     </div>
     
-    <div id="example-3" class="loader"></div>
+    <div id="example-3" class="loader">
+    </div>
+
+    <div id="example-4" class="loader">
+        <div id="ball-1" class="ball"></div>
+        <div id="ball-2" class="ball"></div>
+        <div id="ball-3" class="ball"></div>
+    </div>
   </body>
 </html>
