--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
     </div>
 
     <div id="example-4" class="loader">
-        <div id="ball-1" class="ball"></div>
-        <div id="ball-2" class="ball"></div>
-        <div id="ball-3" class="ball"></div>
+        <div id="ball-container-1" class="ball-container">
+            <div id="ball-1" class="ball"></div>
+        </div>
+        <div id="ball-container-2" class="ball-container">
+            <div id="ball-2" class="ball"></div>
+        </div>
+        <div id="ball-container-3" class="ball-container">
+            <div id="ball-3" class="ball"></div>
+        </div>
     </div>
   </body>
 </html>
