--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>loaders</title>
     <link rel="stylesheet" href="./index.css">
   </head>
-  <body class="cfb">
+  <body>
     <div id="example-1" class="loader"></div>
 
     <div id="example-2" class="loader">
