--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <div id="bar-3" class="bar"></div>
     </div>
     
-    <div id="example-3" class="loader">
-    </div>
+    <div id="example-3" class="loader"></div>
 
     <div id="example-4" class="loader">
         <div id="ball-container-1" class="ball-container">
